--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@angular/router": "~8.2.8",
     "@angular/service-worker": "^8.2.9",
     "@ngxs/store": "^3.5.1",
+    "@types/gsap": "^1.20.2",
+    "gsap": "^2.1.3",
     "redux": "^4.0.4",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^8.18.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
